--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FDCG0Y8WZ2"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-FDCG0Y8WZ2');
+    </script>
     <meta charset = "UTF-8">
     <meta http-equiv="X-UA-compatible" content= "IE=edge">
 	<meta name="viewport" content="width=device=width, initial-scale=1.0">
