--- a/index.html
+++ b/index.html
@@ -106,6 +106,46 @@
         <h1 class="sub-title">My Projects</h1>
         <div class="work-list">
             <div class="work">
+                <img src="Images/istockphoto-1329522419-612x612-2.jpg">
+                <div class="layer">
+                    <h2>Optimizing Queue Performance in Airports</h2>
+                    <p class="para2">The project aims to optimize lane capacity planning and tray processing rates to achieve a 5-minute queue performance target at regulated airports.</p>
+                    <a href="https://github.com/BharathSimhaK/Optimizing-Queue-Performance-through-Lane-Capacity-Planning-and-Tray-Processing-Rates-in-Airports"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="Images/shutterstock_689023369-1-2.jpg">
+                <div class="layer">
+                    <h2>Occupation Demographics in England and Wales</h2>
+                    <p class="para2">The project focuses on the occupation demographics in a workplace region of England and Wales.</p>
+                    <a href="https://github.com/BharathSimhaK/Occupation-Demographics-in-England-and-Wales"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="Images/il_fullxfull.3874903516_3iiz.jpg.webp">
+                <div class="layer">
+                    <h2>Rental Bike Prediction using ML Models</h2>
+                    <p class="para2">The project aims to develop and select the best-performing model through hyperparameter tuning to accurately predict the number of rental bikes out at each hour.</p>
+                    <a href="https://github.com/BharathSimhaK/Rental-Bike-Prediction-using-Machine-Learning-Models"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="Images/f22-section-bg-keyart-xl.jpg.adapt_.1920w-scaled-e1636719960785-1024x693.jpg">
+                <div class="layer">
+                    <h2>Fifa 22 EDA with L1 Linear Regression</h2>
+                    <p class="para2">The project predicts the overall rating of the outfield players using supervised learning method (with tunable hyper-parameter) and compares the results of the models.</p>
+                    <a href="https://github.com/BharathSimhaK/Fifa-22-EDA-with-Linear-Regression-using-L1-Regularization"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="Images/semi-pixelated.jpg">
+                <div class="layer">
+                    <h2>Pixel Transposed Convolutional Networks</h2>
+                    <p class="para2">The project solves the checkerboard problem, which is caused by the existence of no direct relationship among adjacent pixels on the output feature map.</p>
+                    <a href="https://github.com/BharathSimhaK/Semantic-Segmentation-using-Pixel-Transposed-Convolutional-Networks-"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="work">
                 <img src="Images/coronavirus-2.tmb-1920v.jpg">
                 <div class="layer">
                     <h2>Covid - 19 Future Forecasting</h2>
@@ -114,15 +154,6 @@
                     <a href="https://github.com/BharathSimhaK/Covid-19-Future-Forecasting-Using-Supervised-Machine-Learning-Models"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
-            <div class="work">
-                <img src="Images/semi-pixelated.jpg">
-                <div class="layer">
-                    <h2>Covid - 19 Future Forecasting</h2>
-                    <p class="para2">The project predicts the quanitty of upcoming patients affected by COVID - 19 using Machine Learning Models</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                </div>
-            </div>
-           
         </div>
         <!----<a href="#/" class="btn">See More</a>---->
     </div>
